REGRESSION(r287922): Incorrect inline-level box placement with negative horizontal margin when text-align has non-initial value. https://bugs.webkit.org/show_bug.cgi?id=242057 <rdar://problem/96060962>

Reviewed by Antti Koivisto.

In normal cases (assume initial direction/writing mode)
1. the right edge of the content is to the right of the line start
2. "right edge of the content" - "left edge of the content" == content width (essentially content right == content width).
  <div><img>this content is to the right of the image and the line start</div>

However negative horizontal margin may produce a line where the right edge of the content is to the left of the line.
  <div><img style="margin-right: -1000px">this content is to the left of the image and the line start</div>

In such cases the content width is not #2 anymore i.e. negative margin does not shrink the content width (in the above case, the content width is the img width and not 0 or some negative value).

This patch ensures that we use the content edge to align the content.

* LayoutTests/fast/inline/negative-margin-with-text-align-expected.html: Added.
* LayoutTests/fast/inline/negative-margin-with-text-align.html: Added.
* Source/WebCore/layout/formattingContexts/inline/InlineLineBoxBuilder.cpp:
(WebCore::Layout::horizontalAlignmentOffset):

Canonical link: https://commits.webkit.org/251954@main