Source/WebCore/layout/formattingContexts/inline/InlineLineBoxBuilder.cpp
@@ -40,7 +40,8 @@ static std::optional<InlineLayoutUnit> horizontalAlignmentOffset(TextAlignMode t
 {
     // Depending on the line’s alignment/justification, the hanging glyph can be placed outside the line box.
     auto& runs = lineContent.runs;
-    auto contentLogicalWidth = lineContent.contentLogicalWidth;
+    auto contentLogicalRight = lineContent.contentLogicalRight;
+    auto lineLogicalRight = lineContent.lineLogicalWidth;
     if (lineContent.hangingContentWidth) {
         ASSERT(!runs.isEmpty());
         // If white-space is set to pre-wrap, the UA must (unconditionally) hang this sequence, unless the sequence is followed
@@ -50,11 +51,11 @@ static std::optional<InlineLayoutUnit> horizontalAlignmentOffset(TextAlignMode t
         // In some cases, a glyph at the end of a line can conditionally hang: it hangs only if it does not otherwise fit in the line prior to justification.
         if (isConditionalHanging) {
             // FIXME: Conditional hanging needs partial overflow trimming at glyph boundary, one by one until they fit.
-            contentLogicalWidth = std::min(contentLogicalWidth, lineContent.lineLogicalWidth);
+            contentLogicalRight = std::min(contentLogicalRight, lineLogicalRight);
         } else
-            contentLogicalWidth -= lineContent.hangingContentWidth;
+            contentLogicalRight -= lineContent.hangingContentWidth;
     }
-    auto extraHorizontalSpace = lineContent.lineLogicalWidth - contentLogicalWidth;
+    auto extraHorizontalSpace = lineLogicalRight - contentLogicalRight;
     if (extraHorizontalSpace <= 0)
         return { };
 
